[subresource_filter] Remove SubresourceFilter.PageLoad.BlockedPopups

This metric is broken, and we are moving to a new system for blocking
popups anyway.

The new metric will be landed here:
https://chromium-review.googlesource.com/c/chromium/src/+/726545

Bug: 772946
Change-Id: Ib6ce9d316f7188be13a53988e06623ee93065df3
Reviewed-on: https://chromium-review.googlesource.com/728953
Reviewed-by: Shivani Sharma <shivanisha@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510525}
Former-commit-id: 655b3cccf128cb8ee6f000a871ff0726b6134ca9