components/subresource_filter/content/browser/page_load_statistics.cc
@@ -13,17 +13,7 @@ namespace subresource_filter {
 PageLoadStatistics::PageLoadStatistics(const ActivationState& state)
     : activation_state_(state) {}
 
-PageLoadStatistics::~PageLoadStatistics() {
-  // This object is only created for pages which are activated. So, it makes
-  // sense to log blocked popups unconditionally here.
-  //
-  // We *could* restrict this for page loads with configurations allowing the
-  // strong popup blocker, but it doesn't make a big difference. Logging it
-  // always could always show us if the feature is breaking (and triggering when
-  // it shouldn't be).
-  UMA_HISTOGRAM_COUNTS_100("SubresourceFilter.PageLoad.BlockedPopups",
-                           num_popups_blocked_);
-}
+PageLoadStatistics::~PageLoadStatistics() {}
 
 void PageLoadStatistics::OnDocumentLoadStatistics(
     const DocumentLoadStatistics& statistics) {
@@ -78,10 +68,6 @@ void PageLoadStatistics::OnDidFinishLoad() {
     DCHECK(aggregated_document_statistics_.evaluation_total_cpu_duration
                .is_zero());
   }
-}
-
-void PageLoadStatistics::OnBlockedPopup() {
-  num_popups_blocked_++;
 }
 
 }  // namespace subresource_filter
